# scriptty

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
examples/: demo_show.script  rcypher.script
src/: command.rs  engine.rs  event.rs  lib.rs  main.rs  parser.rs  pty.rs  pty_reader.rs
src/commands/: expect.rs  key_press.rs  mod.rs  send_input.rs  show.rs  type_text.rs  wait.rs
tests/: integration_test.rs
